[package]
name = "dht"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bincode = "1.3"
clap = { version = "4.5.56", features = ["derive"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "io-util",
    "sync",
    "time",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
